# personal-finance-api

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
src/: manage.py
src/authentication/: authentication.py  urls.py  views.py
src/authentication/tests/: helpers.py  test_authentication.py  test_throttle.py
src/locale/pt_BR/LC_MESSAGES/: django.po
src/personal_finance_api/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
src/transactions/: models.py  serializers.py  services.py  urls.py  views.py
src/transactions/migrations/: 0001_initial.py  0002_initial.py  0002_transaction.py
src/transactions/tests/: __init__.py  helpers.py  test_categories.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
