[project]
name = "personal-finance-api"
version = "0.1.0"
description = ""
authors = [{ name = "Júlio Soares", email = "juliosoares@b2bit.company" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pytest-celery (>=1.2.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-constance (>=4.3.4,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "personal_finance_api.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"
