[project]
name = "personal-finance-api"
version = "0.1.0"
description = ""
authors = [{ name = "Júlio Soares", email = "juliosoares@b2bit.company" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "drf-yasg (>=1.21.11,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pytest-celery (>=1.2.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-constance (>=4.3.4,<5.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "personal_finance_api.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"
exclude = ["/.venv/", "build", "dist", ".git", ".venv", "*/migrations/*", "manage.py"]
# select = [
#     "F",
#     "I",
#     "N",
#     "YTT",
#     "S",
#     "B",
#     "COM",
#     "C4",
#     "DTZ",
#     "DJ",
#     "EM",
#     "EXE",
#     "ISC",
#     "ICN",
#     "G",
#     "T20",
#     "PYI",
#     "Q",
#     "RSE",
#     "RET",
#     "SIM",
#     "PL",
#     "TRY",
#     "UP",
# ]
ignore = ["DJ001", "S107", "S106", "E501", "S311"]
